Fix spacing

--- a/src/components/CTA/CTA.module.scss
+++ b/src/components/CTA/CTA.module.scss
@@ -10,7 +10,8 @@
   padding: 4rem;
   border: 1.5rem solid #fff;
   color: #fff;
-  box-shadow: #000 0px 0px 0px 0px, #000 0px 0px 0px 0px,
+  box-shadow: #000 0px 0px 0px 0px,
+    #000 0px 0px 0px 0px,
     rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 
     @media (min-width: $breakpoint-small) {
@@ -22,7 +23,6 @@
 .content {
     width: 100%;
     margin-bottom: 2rem;
-
 
     @media (min-width: $breakpoint-small) {
         width: 60%;
